@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -40,43 +40,13 @@
  */
 package com.oracle.truffle.nfi.backend.panama;
 
-import com.oracle.truffle.api.exception.AbstractTruffleException;
-import com.oracle.truffle.api.impl.Accessor.ForeignSupport;
-import com.oracle.truffle.api.nodes.EncapsulatingNodeReference;
-import com.oracle.truffle.api.nodes.Node;
+import com.oracle.truffle.api.impl.Accessor;
 
-@SuppressWarnings("serial")
-final class NFIError extends AbstractTruffleException {
+final class NFIPanamaAccessor extends Accessor {
 
-    NFIError(String message) {
-        this(message, null);
+    private static final NFIPanamaAccessor ACCESSOR = new NFIPanamaAccessor();
+    static final ForeignSupport FOREIGN = ACCESSOR.foreignSupport();
+
+    private NFIPanamaAccessor() {
     }
-
-    NFIError(String message, Node location) {
-        super(message, resolveLocation(location));
-    }
-
-    private static Node resolveLocation(Node node) {
-        if (node == null || node.isAdoptable()) {
-            return node;
-        } else {
-            return EncapsulatingNodeReference.getCurrent().get();
-        }
-    }
-
-    static NFIError illegalNativeAccess(Node location) {
-        Module truffleModule = ForeignSupport.class.getModule();
-        String targetModule;
-        String error;
-        if (truffleModule.isNamed()) {
-            targetModule = truffleModule.getName();
-            error = String.format("Illegal native access from module %s.", targetModule);
-        } else {
-            targetModule = "ALL-UNNAMED";
-            error = "Illegal native access from an unnamed module.";
-        }
-        return new NFIError(String.format("%s To enable the native access required by the NFI Panama backend, please add '--enable-native-access=%s' to the JVM command line options.",
-                        error, targetModule), location);
-    }
-
 }
